--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
   <link rel="apple-touch-icon" href="./logo192.png" />
   <link rel="manifest" href="./manifest.json" />
   <title>React App</title>
-  <script defer="defer" src="./static/js/main.0245406a.js"></script>
+  <script defer="defer" src="./static/js/main.8fbf683a.js"></script>
   <link href="./static/css/main.6fec2778.css" rel="stylesheet">
 </head>
 
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+<body><noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
 
